2004-09-19  David Sedeño <david@alderia.com>

	* src/main.c: change Activation_ID

2004-09-13  David Sedeño <david@alderia.com>

	* data/preferences.glade: connect delete_event with
	  on_pref_cancel_button_clicked (Julien Cegarra)

2004-09-11  David Sedeño <david@alderia.com>

	* src/main.c: Check instance of bonobo
	* src/gwget-application.[ch]: bonobo gwget application
	  Object. Currently doesn't recive message :(
	* src/Makefile.am: Added instructions for bonobo object
	  compilation.
	* configure.in: Check Bonobo stuff

2004-09-11  David Sedeño <david@alderia.com>

	* configure.in: Version 0.14.1

2004-09-11  David Sedeño <david@alderia.com>

	* src/main_window_cb.c (on_boton_pref_clicked):
	Apply state of limit_speed_check and resume_at_start
	(Julien.Cegarra).

2004-09-10  David Sedeño <david@alderia.com>

	* src/main_window_cb.c (on_treeview1_button_press_event):
	  return False if can open the default application in double click.

2004-09-08  David Sedeño <david@alderia.com>

	* src/main_window_cb.c (new_download):
	  Dont free mime var. This fix a crash.
	  Dont add the download to the download list 
	  (already added).

2004-09-05  David Sedeño <david@alderia.com>

	* src/main_window.c (on_treeview_drag_received): 
	  Fix compilation build with gcc 2.95 (Jens Granseuer).

2004-08-31  David Sedeño <david@alderia.com>

	* pixmaps/Makefile.am: Fix icon installation.
	* gwget.desktop.in: Icon gwget.png instead of gwget/gwget.png.
 
2004-08-29  David Sedeño <david@alderia.com>

	* configure.in: Added fr to ALL_LINGUAS.

2004-08-24  Jarkko Ranta  <jjranta@cc.joensuu.fi>

	* configure.in: Added fi to ALL_LINGUAS.

2004-08-21  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added cs to ALL_LINGUAS.

2004-08-20  David Sedeño <david@alderia.com>

	* configure.in: Version 0.14

2004-08-18  Estêvão Samuel Procópio  <tevaum@cvs.gnome.org>

	* configure.in: Added pt_BR to ALL_LINGUAS.
	* ChangeLog: Converted from ISO-8859 to UTF-8.
